...

sealed class SettingItems(
    val title: String,
    val icon: ImageVector,
    val route: String,
) {
    object Downloads : SettingItems("Downloads", Icons.Default.Download, DownloaderScreenSpec.navHostRoute)
    object Appearance :
        SettingItems("Appearance", Icons.Default.Palette, AppearanceScreenSpec.navHostRoute)
    object DnsOverHttp :
        SettingItems("DnsOverHttp", Icons.Default.Dns, DnsOverHttpSettingSpec.navHostRoute)
    object About : SettingItems("About", Icons.Default.Info, AboutInfoScreenSpec.navHostRoute)
}

@Composable
...
