...
	});</script> <ul class="main-menu-search nav-menu"><li class="menu-search">
<a href="javascript:;" class="open-search-main-menu"> <i class="icon ion-ios-search"></i>
<i class="icon ion-android-close"></i> </a><ul class="search-main-menu"><li><form class="manga-search-form search-form ajax" action="https://readwebnovels.net/" method="get">
<input class="manga-search-field" type="text" placeholder="Search..." name="s" value="">
<input type="hidden" name="post_type" value="wp-manga"> <i class="icon ion-ios-search"></i><div class="loader-inner ball-clip-rotate-multiple"><div></div><div></div></div>
<input type="submit" value="Search"></form></li></ul></li></ul><div class="link-adv-search">
<a href="https://readwebnovels.net/?s=&#038;post_type=wp-manga">Advanced</a></div></div></div></div></div></div><div class="c-togle__menu">
<button type="button" class="menu_icon__open">
<span></span> <span></span> <span></span>
</button></div></div></div></div></div></div></div><div class="mobile-menu menu-collapse off-canvas"><div class="close-nav">
<button class="menu_icon__close">
<span></span> <span></span>
</button></div><div class="c-modal_item">
...
<a href="https://readwebnovels.net/novel-tag/transmigration/" class="tag-cloud-link tag-link-527 tag-link-position-41" style="font-size: 11.352112676056pt;" aria-label="Transmigration (107 items)">Transmigration</a>
<a href="https://readwebnovels.net/novel-tag/transported-to-another-world/" class="tag-cloud-link tag-link-393 tag-link-position-42" style="font-size: 11.154929577465pt;" aria-label="Transported to Another World (103 items)">Transported to Another World</a>
<a href="https://readwebnovels.net/novel-tag/underestimated-protagonist/" class="tag-cloud-link tag-link-535 tag-link-position-43" style="font-size: 11.746478873239pt;" aria-label="Underestimated Protagonist (110 items)">Underestimated Protagonist</a>
<a href="https://readwebnovels.net/novel-tag/wars/" class="tag-cloud-link tag-link-464 tag-link-position-44" style="font-size: 9.9718309859155pt;" aria-label="Wars (90 items)">Wars</a>
<a href="https://readwebnovels.net/novel-tag/weak-to-strong/" class="tag-cloud-link tag-link-347 tag-link-position-45" style="font-size: 17.464788732394pt;" aria-label="Weak to Strong (220 items)">Weak to Strong</a></div></div></div></div></div></div></div></div></div></div></div></div><footer class="site-footer"><div class="bottom-footer"><div class="container"><div class="row"><div class="col-md
<input type="hidden" name="bookmarking" value="0"/><div class="modal fade" id="form-login" tabindex="-1" role="dialog"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header">
<button type="button" class="close" data-dismiss="modal" aria-label="Close">
<span aria-hidden="true">&times;</span></button></div><div class="modal-body"><div id="login" class="login"><h3>
<a href="https://readwebnovels.net/" title="Read Web Novels" tabindex="-1">Sign in</a></h3><p class="message login"></p><meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' /><link rel='dns-prefetch' href='//s.w.org' /> <script data-optimized="1" type='text/javascript' src='https://readwebnovels.net/wp-content/litespeed/js/8a5630bf47213311bac8c
                        background-image: url(https://readwebnovels.net/wp-content/uploads/2020/01/book3.png);
                        width: 320px;
                        height: 120px;
                        background-size: auto;
...
